test/errors/array_types_error/zs/implicit_array_compound_error.zs
package implicit_array_compound_error;

struct Compound
{
    uint8 data;
};

struct ImplicitArrayCompoundError
{
    implicit Compound array[];
};
